Updated job names

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -20,7 +20,7 @@ on:
 jobs:
   update:
     if: ${{ (github.event.pull_request.merged == true) || (github.event_name == 'workflow_dispatch' && github.event.inputs.ACTION == 'UPDATE') }}
-    name: Deploy
+    name: Update
     environment: prod
     runs-on: ubuntu-latest
     steps:
@@ -42,9 +42,9 @@ jobs:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           TF_VAR_compartment_ocid: ${{ inputs.TF_VAR_COMPARTMENT_OCID }}
 
-  deploy:
+  destroy:
     if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.ACTION == 'DESTROY') }}
-    name: Deploy
+    name: Destroy
     environment: prod
     runs-on: ubuntu-latest
     steps:
