--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Create Cloudflare Tunnel
         id: create_tunnel
         run: |
-          TUNNEL_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/accounts${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel \
+          TUNNEL_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel \
             --header 'Content-Type: application/json' \
             --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
             --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
