--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -45,9 +45,56 @@ jobs:
     outputs:
       INSTANCE_PUBIP: ${{ steps.pulumi.outputs.instance_pubip }}
 
+  records:
+    name: Create Tunnel and DNS
+    needs: [ update ]
+    environment: prod
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create Cloudflare Tunnel
+        id: create_tunnel
+        run: |
+          TUNNEL_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel \
+            --header 'Content-Type: application/json' \
+            --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
+            --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
+            "config_src": "cloudflare",
+            "name": "${{ vars.TUNNEL_NAME }}",
+            "tunnel_secret": "${{ secrets.CF_TUNNEL_SECRET }}"}')
+          TUNNEL_OUTCOME=$(echo ${TUNNEL_RESP} | jq -r '.success')
+          TUNNEL_ID=$(echo ${TUNNEL_JSON} | jq -r '.result.id')
+          TUNNEL_TOKEN=$(echo ${TUNNEL_JSON} | jq -r '.token')
+          echo "CF_TUNNEL_ID=${TUNNEL_ID}" >> $GITHUB_OUTPUT
+          echo "${TUNNEL_RESP}"
+          if [ "$TUNNEL_OUTCOME" != 'true' ]; then
+            echo "ERROR while creating DNS record"
+            exit 1
+          else
+            echo "TUNNEL_TOKEN=${TUNNEL_TOKEN}" >> $GITHUB_OUTPUT
+          fi
+      - name: Create Cloudflare DNS Records
+        run: |
+          DNS_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/zones/${{ vars.CF_ZONE_ID }}/dns-records \
+            --header 'Content-Type: application/json' \
+            --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
+            --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
+            "content": "${{ steps.create_tunnel.outputs.CF_TUNNEL_ID }}.cfargotunnel.com",
+            "name": "${{ vars.SSH_RECORD_NAME }}",
+            "proxied": false,
+            "type": "CNAME",
+            "ttl": 3600}')
+          DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
+          echo $DNS_RESP
+          if [ "$DNS_OUTCOME" != 'true' ]; then
+            echo "ERROR while creating DNS record"
+            exit 1
+          fi
+    outputs:
+      TUNNEL_TOKEN: {{ steps.create_tunnel.outputs.TUNNEL_TOKEN }}
+
   configure:
     name: Configure Instance
-    needs: [ update ]
+    needs: [ update, records ]
     environment: prod
     runs-on: ubuntu-latest
     steps:
@@ -73,49 +120,7 @@ jobs:
             --user ${{ secrets.SSH_USERNAME }} \
             --key-file ~/.ssh/${{ vars.SSH_PRIVATE_KEY_NAME }} \
             --verbose \
-            --extra-vars "CF_TUNNEL_JSON_ENCODED=${{ secrets.CF_TUNNEL_JSON_ENCODED }}"
-
-  records:
-    name: Create Tunnel and DNS
-    needs: [ update ]
-    environment: prod
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Cloudflare Tunnel
-        id: create_tunnel
-        run: |
-          TUNNEL_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel \
-            --header 'Content-Type: application/json' \
-            --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
-            --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
-            "config_src": "cloudflare",
-            "name": "${{ vars.TUNNEL_NAME }}",
-            "tunnel_secret": "${{ secrets.CF_TUNNEL_SECRET }}"}')
-          TUNNEL_OUTCOME=$(echo ${TUNNEL_RESP} | jq -r '.success')
-          TUNNEL_ID=$(echo ${TUNNEL_JSON} | jq -r '.result.id')
-          echo "CF_TUNNEL_ID=${TUNNEL_ID}" >> $GITHUB_OUTPUT
-          echo "${TUNNEL_RESP}"
-          if [ "$TUNNEL_OUTCOME" != 'true' ]; then
-            echo "ERROR while creating DNS record"
-            exit 1
-          fi
-      - name: Create Cloudflare DNS Records
-        run: |
-          DNS_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/zones/${{ vars.CF_ZONE_ID }}/dns-records \
-            --header 'Content-Type: application/json' \
-            --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
-            --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
-            "content": "${{ steps.create_tunnel.outputs.CF_TUNNEL_ID }}.cfargotunnel.com",
-            "name": "${{ vars.SSH_RECORD_NAME }}",
-            "proxied": false,
-            "type": "CNAME",
-            "ttl": 3600}')
-          DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
-          echo $DNS_RESP
-          if [ "$DNS_OUTCOME" != 'true' ]; then
-            echo "ERROR while creating DNS record"
-            exit 1
-          fi
+            --extra-vars "CF_TUNNEL_JSON_ENCODED=${{ needs.records.outputs.TUNNEL_TOKEN }}"
 
   destroy:
     if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.ACTION == 'DESTROY') }}
