Missing dollar sign

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -90,7 +90,7 @@ jobs:
             exit 1
           fi
     outputs:
-      TUNNEL_TOKEN: {{ steps.create_tunnel.outputs.TUNNEL_TOKEN }}
+      TUNNEL_TOKEN: ${{ steps.create_tunnel.outputs.TUNNEL_TOKEN }}
 
   configure:
     name: Configure Instance
