--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -74,7 +74,7 @@ jobs:
           fi
       - name: Create Cloudflare DNS Records
         run: |
-          DNS_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/zones/${{ vars.CF_ZONE_ID }}/dns-records \
+          DNS_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/zones/${{ vars.CF_ZONE_ID }}/dns_records \
             --header 'Content-Type: application/json' \
             --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
             --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
