--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -66,7 +66,7 @@ jobs:
 
           if [ "$TUNNEL_OUTCOME" != 'true' ]; then
             echo "INFO: Tunnel does not exist, creating..."
-            TUNNEL_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel \
+            TUNNEL_RESP=$(curl -X POST --url "https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel" \
               --header 'Content-Type: application/json' \
               --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
               --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
@@ -99,7 +99,7 @@ jobs:
           fi
       - name: Create Cloudflare DNS Records
         run: |
-          DNS_RESP=$(curl -X POST --url https://api.cloudflare.com/client/v4/zones/${{ vars.CF_ZONE_ID }}/dns_records \
+          DNS_RESP=$(curl -X POST --url "https://api.cloudflare.com/client/v4/zones/${{ vars.CF_ZONE_ID }}/dns_records" \
             --header 'Content-Type: application/json' \
             --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
             --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
