--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -58,12 +58,13 @@ jobs:
             --header 'Content-Type: application/json' \
             --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
             --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}')
-          echo "${TUNNEL_RESP}"
-          TUNNEL_OUTCOME=$(echo ${TUNNEL_RESP} | jq -r '.success')
+          RESP_OUTCOME=$(echo ${TUNNEL_RESP} | jq -r '.success')
+          RESP_ERRORS=$(echo ${TUNNEL_RESP} | jq -r '.errors')
+          RESP_MESSAGES=$(echo ${TUNNEL_RESP} | jq -r '.messages')
           CF_TUNNEL_ID=$(echo ${TUNNEL_RESP} | jq -r '.result[].id')
           echo "CF_TUNNEL_ID=${CF_TUNNEL_ID}" >> $GITHUB_OUTPUT
 
-          if [ "$TUNNEL_OUTCOME" != 'true' ]; then
+          if [ "$RESP_OUTCOME" != 'true' ]; then
             echo "INFO: Tunnel does not exist, creating..."
             TUNNEL_RESP=$(curl -X POST --url "https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel" \
               --header 'Content-Type: application/json' \
@@ -74,25 +75,19 @@ jobs:
               "tunnel_secret": "${{ secrets.CF_TUNNEL_SECRET }}"}')
             echo "${TUNNEL_RESP}"
             TUNNEL_OUTCOME=$(echo ${TUNNEL_RESP} | jq -r '.success')
-            TUNNEL_ID=$(echo ${TUNNEL_JSON} | jq -r '.result.id')
-            echo "CF_TUNNEL_ID=${TUNNEL_ID}" >> $GITHUB_OUTPUT
+            RESP_ERRORS=$(echo ${TUNNEL_RESP} | jq -r '.errors')
+            RESP_MESSAGES=$(echo ${TUNNEL_RESP} | jq -r '.messages')
             if [ "$TUNNEL_OUTCOME" != 'true' ]; then
-              echo "ERROR while creating DNS record"
+              echo "ERROR: while creating DNS record ${RESP_ERRORS}"
               exit 1
             else
-              echo "TUNNEL_TOKEN=${TUNNEL_TOKEN}" >> $GITHUB_OUTPUT
+              echo "INFO: Tunnel created successfully ${RESP_MESSAGES}"
+              TUNNEL_ID=$(echo ${TUNNEL_JSON} | jq -r '.result.id')
+              echo "CF_TUNNEL_ID=${TUNNEL_ID}" >> $GITHUB_OUTPUT
             fi
           else
             echo "INFO: Tunnel already exists..."
-
-            ENCODED_JSON_STRING=$( jq -n \
-            --arg AID "${{ vars.CF_ACCOUNT_ID }}" \
-            --arg TID "$CF_TUNNEL_ID" \
-            --arg TS "${{ secrets.CF_TUNNEL_SECRET }}" \
-            '{a:$AID,t:$TID,s:$TS} | @base64')
-
             echo "CF_TUNNEL_ID=${CF_TUNNEL_ID}" >> $GITHUB_OUTPUT
-            echo "TUNNEL_TOKEN=${ENCODED_JSON_STRING}" >> $GITHUB_OUTPUT
           fi
       - name: Create Cloudflare DNS Records
         run: |
@@ -105,15 +100,17 @@ jobs:
             "proxied": true,
             "type": "CNAME",
             "ttl": 3600}')
-          echo $DNS_RESP
           DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
+          DNS_ERRORS=$(echo $DNS_RESP | jq -r '.errors')
+          DNS_MESSAGES=$(echo $DNS_RESP | jq -r '.success')
           if [ "$DNS_OUTCOME" != 'true' ]; then
-            echo "ERROR while creating DNS record"
+            echo "ERROR: while creating DNS record ${DNS_ERRORS}"
             exit 1
+          else
+            echo "INFO: DNS Created successfully ${DNS_MESSAGES}"
           fi
     outputs:
       TUNNEL_ID: ${{ steps.create_tunnel.outputs.CF_TUNNEL_ID }}
-      TUNNEL_TOKEN: ${{ steps.create_tunnel.outputs.TUNNEL_TOKEN }}
 
   configure:
     name: Configure Instance
@@ -143,8 +140,9 @@ jobs:
             --user ${{ secrets.SSH_USERNAME }} \
             --key-file ~/.ssh/${{ vars.SSH_PRIVATE_KEY_NAME }} \
             --verbose \
-            --extra-vars "CF_TUNNEL_JSON_ENCODED=${{ needs.records.outputs.TUNNEL_TOKEN }}" \
-            --extra-vars "TUNNEL_ID=${{ needs.records.outputs.TUNNEL_ID }}
+            --extra-vars "CF_ACCOUNT_ID=${{ vars.CF_ACCOUNT_ID }} \
+            --extra-vars "CF_TUNNEL_ID=${{ needs.records.outputs.TUNNEL_ID }} \
+            --extra-vars "CF_TUNNEL_SECRET=${{ secrets.CF_TUNNEL_SECRET }}"
 
   destroy:
     if: ${{ (github.event_name == 'workflow_dispatch' && github.event.inputs.ACTION == 'DESTROY') }}
