--- a/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
+++ b/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
@@ -29,7 +29,7 @@
 - name: Update Cloudflare Tunnel Creds
   ansible.builtin.template:
     src: creds.json.j2
-    dest: '/home/{{ansible_user}}/.cloudflared/{{ TUNNEL_ID }}.json'
+    dest: '/home/{{ansible_user}}/.cloudflared/{{ CF_TUNNEL_ID }}.json'
     owner: '{{ ansible_user }}'
     group: '{{ ansible_user }}'
     mode: '0644'
