--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -51,6 +51,8 @@ jobs:
     environment: prod
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Create Cloudflare Tunnel
         id: create_tunnel
         run: |
