--- a/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
+++ b/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
@@ -15,6 +15,7 @@
 - name: Remove Tunnel
   ansible.builtin.shell: sudo cloudflared service uninstall
   register: remove_cloudflared
+  ignore_errors: true
 - debug: msg="{{ remove_cloudflared.stdout_lines }}"
 
 - name: Update Cloudflare Tunnel Config
