--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -56,7 +56,6 @@ jobs:
       - name: Create Cloudflare Tunnel
         id: create_tunnel
         run: |
-          set -x
           TUNNEL_RESP=$(curl -X GET --url "https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel?is_deleted=false&name=${{ vars.SITE_URL }}" \
             --header 'Content-Type: application/json' \
             --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
@@ -93,7 +92,7 @@ jobs:
                 echo "CF_TUNNEL_ID=${TUNNEL_ID}" >> $GITHUB_OUTPUT
               fi
             fi
-            echo "INFO: Tunnel ID ${CF_TUNNEL_ID}"
+            echo "INFO: Tunnel ID ${TUNNEL_ID}"
           fi
       - name: Create SSH DNS Record
         uses: ./.github/actions/create-dns-record
