--- a/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
+++ b/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
@@ -1,27 +1,37 @@
 ---
 - name: Create directory to put files into
   ansible.builtin.file:
-    path: '/home/{{ ansible_user }}/.cloudflared/'
+    path: '/root/.cloudflared/'
     state: directory
     owner: '{{ ansible_user }}'
     group: '{{ ansible_user }}'
     mode: '0755'
 
+- name: Setup Cloudflare GPG Key
+  ansible.builtin.shell: sudo mkdir -p --mode=0755 /usr/share/keyrings && curl -fsSL https://pkg.cloudflare.com/cloudflare-main.gpg | sudo tee /usr/share/keyrings/cloudflare-main.gpg >/dev/null
+  register: setup_gpg
+- debug: msg="{{ setup_gpg.stdout_lines }}"
+
+- name: Setup Cloudflare APT Repo
+  ansible.builtin.shell: echo 'deb [signed-by=/usr/share/keyrings/cloudflare-main.gpg] https://pkg.cloudflare.com/cloudflared jammy main' | sudo tee /etc/apt/sources.list.d/cloudflared.list
+  register: setup_apt
+- debug: msg="{{ setup_apt.stdout_lines }}"
+
 - name: Install Cloudflared
-  ansible.builtin.shell: curl -L --output cloudflared.deb https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb && sudo dpkg -i cloudflared.deb
+  ansible.builtin.shell: sudo apt-get update && sudo apt-get install cloudflared
   register: install_cloudflared
 - debug: msg="{{ install_cloudflared.stdout_lines }}"
 
 - name: Remove Tunnel
+  ignore_errors: true
   ansible.builtin.shell: sudo cloudflared service uninstall
   register: remove_cloudflared
-  ignore_errors: true
 - debug: msg="{{ remove_cloudflared.stdout_lines }}"
 
 - name: Update Cloudflare Tunnel Config
   ansible.builtin.template:
     src: config.yml.j2
-    dest: '/home/{{ansible_user}}/.cloudflared/config.yml'
+    dest: '/root/.cloudflared/config.yml'
     owner: '{{ ansible_user }}'
     group: '{{ ansible_user }}'
     mode: '0644'
@@ -30,14 +40,13 @@
 - name: Update Cloudflare Tunnel Creds
   ansible.builtin.template:
     src: creds.json.j2
-    dest: '/home/{{ansible_user}}/.cloudflared/{{ CF_TUNNEL_ID }}.json'
+    dest: '/root/.cloudflared/{{ CF_TUNNEL_ID }}.json'
     owner: '{{ ansible_user }}'
     group: '{{ ansible_user }}'
     mode: '0644'
     force: yes
 
 - name: Configure Tunnel
-  ansible.builtin.shell: sudo -i -u {{ ansible_user }} cloudflared service install
+  ansible.builtin.shell: sudo cloudflared service install
   register: configure_cloudflared
-  become: true
 - debug: msg="{{ configure_cloudflared.stdout_lines }}"
