Become when creating root directory

--- a/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
+++ b/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Create directory to put files into
+  become: true
   ansible.builtin.file:
     path: '/root/.cloudflared/'
     state: directory
