--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -77,7 +77,7 @@ jobs:
                 --header 'Content-Type: application/json' \
                 --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
                 --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data '{
-                "config_src": "local",
+                "config_src": "cloudflare",
                 "name": "${{ vars.SITE_URL }}",
                 "tunnel_secret": "${{ secrets.CF_TUNNEL_SECRET }}"}')
               TUNNEL_OUTCOME=$(echo ${TUNNEL_RESP} | jq -r '.success')
@@ -93,6 +93,28 @@ jobs:
               fi
             fi
             echo "INFO: Tunnel ID ${TUNNEL_ID}"
+          fi
+      - name: Update Tunnel Rules
+        run: |
+          ROUTE_CONFIG='{"config": {"ingress": []}}'
+          ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "${{ vars.SITE_URL }}" --arg SERVICE "http://localhost:8000" '.config.ingress +=[{hostname:$HOSTNAME,service:$SERVICE}]')
+          ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "www.${{ vars.SITE_URL }}" --arg SERVICE "http://localhost:8000" '.config.ingress +=[{hostname:$HOSTNAME,service:$SERVICE}]')
+          ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "ssh.${{ vars.SITE_URL }}" --arg SERVICE "ssh://localhost:22" '.config.ingress +=[{hostname:$HOSTNAME,service:$SERVICE}]')
+          ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "grafana.${{ vars.SITE_URL }}" --arg SERVICE "http://localhost:3000" '.config.ingress +=[{hostname:$HOSTNAME,service:$SERVICE}]')
+          ROUTE_CONFIG=$(jq -cr --arg HOSTNAME "prometheus.${{ vars.SITE_URL }}" --arg SERVICE "http://localhost:9090" '.config.ingress +=[{hostname:$HOSTNAME,service:$SERVICE}]')
+          ROUTE_CONFIG=$(jq -cr --arg SERVICE "http_status:404" '.config.ingress +=[{hostname:$HOSTNAME,service:$SERVICE}]')
+          CONFIG_RESP=$(curl -X PUT --url "https://api.cloudflare.com/client/v4/accounts/${{ vars.CF_ACCOUNT_ID }}/cfd_tunnel/${{ steps.create_tunnel.outputs.CF_TUNNEL_ID }}/configurations" \
+                      --header 'Content-Type: application/json' \
+                      --header 'X-Auth-Email: ${{ secrets.CF_API_USER }}' \
+                      --header 'X-Auth-Key: ${{ secrets.CF_API_KEY }}' --data "${ROUTE_CONFIG}")
+          CONFIG_OUTCOME=$(echo ${CONFIG_RESP} | jq -r '.success')
+          RESP_ERRORS=$(echo ${CONFIG_RESP} | jq -r '.errors')
+          RESP_MESSAGES=$(echo ${CONFIG_RESP} | jq -r '.messages')
+          if [ "$CONFIG_OUTCOME" != 'true' ]; then
+            echo "ERROR: while configuring tunnel rules ${RESP_ERRORS}"
+            exit 1
+          else
+            echo "INFO: Tunnel configured successfully ${RESP_MESSAGES}"
           fi
       - name: Create SSH DNS Record
         uses: ./.github/actions/create-dns-record
