Check if dns record exists first

--- a/.github/actions/create-dns-record/action.yml
+++ b/.github/actions/create-dns-record/action.yml
@@ -30,30 +30,71 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Check for Existing Record
+      id: check_record
+      shell: bash
+      run: |
+        DNS_RESP=$(curl -X GET --url "https://api.cloudflare.com/client/v4/zones/${{ inputs.CF_ZONE_ID }}/dns_records?name=${{ inputs.RECORD_NAME }}" \
+          --header 'Content-Type: application/json' \
+          --header 'X-Auth-Email: ${{ inputs.CF_API_USER }}' \
+          --header 'X-Auth-Key: ${{ inputs.CF_API_KEY }}')
+        DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
+        DNS_ERRORS=$(echo $DNS_RESP | jq -r '.errors[]')
+        DNS_MESSAGES=$(echo $DNS_RESP | jq -r '.messages[]')
+        RECORD_ID=$(echo $DNS_RESP | jq -r '.result[].id')
+        echo ${RECORD_ID}
+        if [ "$DNS_OUTCOME" != 'true' ]; then
+          echo "ERROR: Fetching DNS record failed ${DNS_ERRORS} ${DNS_MESSAGES}"
+        else
+          if [ -n "${RECORD_ID} ]; then
+            echo "INFO: DNS Record Exists"
+            echo "RECORD_ID=$RECORD_ID" >> $GITHUB_OUTPUT
+          else
+            echo "INFO: DNS Record does not exist"
+          fi
+        fi
     - name: Create Cloudflare DNS Records
       shell: bash
       continue-on-error: true
       run: |
-        DNS_RESP=$(curl -X POST --url "https://api.cloudflare.com/client/v4/zones/${{ inputs.CF_ZONE_ID }}/dns_records" \
-          --header 'Content-Type: application/json' \
-          --header 'X-Auth-Email: ${{ inputs.CF_API_USER }}' \
-          --header 'X-Auth-Key: ${{ inputs.CF_API_KEY }}' --data '{
-          "content": "${{ inputs.RECORD_VALUE }}",
-          "name": "${{ inputs.RECORD_NAME }}",
-          "proxied": true,
-          "type": "${{ inputs.RECORD_TYPE }}",
-          "ttl": 3600}')
-        DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
-        DNS_ERRORS=$(echo $DNS_RESP | jq -r '.errors[]')
-        DNS_MESSAGES=$(echo $DNS_RESP | jq -r '.messages[]')
-        if [ "$DNS_OUTCOME" != 'true' ]; then
-          ERROR_CODE=$(echo "${DNS_ERRORS}" | jq -r '.code')
-          if [ "${ERROR_CODE}" == 81053 ]; then
-            echo "WARN: Record already exists"
-          else
+        if [ -n "${{ steps.check_record.outputs.RECORD_ID }}" ]; then
+          echo "Updating DNS record"
+          DNS_RESP=$(curl -X PUT --url "https://api.cloudflare.com/client/v4/zones/${{ inputs.CF_ZONE_ID }}/dns_records/${{ steps.check_record.outputs.RECORD_ID }}" \
+            --header 'Content-Type: application/json' \
+            --header 'X-Auth-Email: ${{ inputs.CF_API_USER }}' \
+            --header 'X-Auth-Key: ${{ inputs.CF_API_KEY }}' --data '{
+            "content": "${{ inputs.RECORD_VALUE }}",
+            "name": "${{ inputs.RECORD_NAME }}",
+            "proxied": true,
+            "type": "${{ inputs.RECORD_TYPE }}",
+            "ttl": 3600}')
+          DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
+          DNS_ERRORS=$(echo $DNS_RESP | jq -r '.errors[]')
+          DNS_MESSAGES=$(echo $DNS_RESP | jq -r '.messages[]')
+          if [ "$DNS_OUTCOME" != 'true' ]; then
             echo "ERROR: while creating DNS record ${DNS_ERRORS}"
             exit 1
+          else
+            echo "INFO: DNS updated successfully ${DNS_MESSAGES}"
           fi
         else
-          echo "INFO: DNS Created successfully ${DNS_MESSAGES}"
+          echo "Create DNS record
+          DNS_RESP=$(curl -X POST --url "https://api.cloudflare.com/client/v4/zones/${{ inputs.CF_ZONE_ID }}/dns_records" \
+            --header 'Content-Type: application/json' \
+            --header 'X-Auth-Email: ${{ inputs.CF_API_USER }}' \
+            --header 'X-Auth-Key: ${{ inputs.CF_API_KEY }}' --data '{
+            "content": "${{ inputs.RECORD_VALUE }}",
+            "name": "${{ inputs.RECORD_NAME }}",
+            "proxied": true,
+            "type": "${{ inputs.RECORD_TYPE }}",
+            "ttl": 3600}')
+          DNS_OUTCOME=$(echo $DNS_RESP | jq -r '.success')
+          DNS_ERRORS=$(echo $DNS_RESP | jq -r '.errors[]')
+          DNS_MESSAGES=$(echo $DNS_RESP | jq -r '.messages[]')
+          if [ "$DNS_OUTCOME" != 'true' ]; then
+            echo "ERROR: while creating DNS record ${DNS_ERRORS}"
+            exit 1
+          else
+            echo "INFO: DNS Created successfully ${DNS_MESSAGES}"
+          fi
         fi
