--- a/.github/actions/create-dns-record/action.yml
+++ b/.github/actions/create-dns-record/action.yml
@@ -34,6 +34,7 @@ runs:
       id: check_record
       shell: bash
       run: |
+        set -x
         DNS_RESP=$(curl -X GET --url "https://api.cloudflare.com/client/v4/zones/${{ inputs.CF_ZONE_ID }}/dns_records?name=${{ inputs.RECORD_NAME }}" \
           --header 'Content-Type: application/json' \
           --header 'X-Auth-Email: ${{ inputs.CF_API_USER }}' \
@@ -46,7 +47,7 @@ runs:
         if [ "$DNS_OUTCOME" != 'true' ]; then
           echo "ERROR: Fetching DNS record failed ${DNS_ERRORS} ${DNS_MESSAGES}"
         else
-          if [ -n "${RECORD_ID} ]; then
+          if [ -n "${RECORD_ID}" ]; then
             echo "INFO: DNS Record Exists"
             echo "RECORD_ID=$RECORD_ID" >> $GITHUB_OUTPUT
           else
@@ -57,6 +58,7 @@ runs:
       shell: bash
       continue-on-error: true
       run: |
+        set -x
         if [ -n "${{ steps.check_record.outputs.RECORD_ID }}" ]; then
           echo "Updating DNS record"
           DNS_RESP=$(curl -X PUT --url "https://api.cloudflare.com/client/v4/zones/${{ inputs.CF_ZONE_ID }}/dns_records/${{ steps.check_record.outputs.RECORD_ID }}" \
